--- a/hadoop2.x/roles/ssh/tasks/main.yml
+++ b/hadoop2.x/roles/ssh/tasks/main.yml
@@ -13,7 +13,7 @@
     group: root
     mode: '0755'
 
-- name: 发送一次scp命令以便后续无需再次出现选择提示导致进程阻塞
+- name: 发送一次ssh命令以便后续无需再次出现选择提示导致进程阻塞
   shell: |
     {{ tmp_dir }}/ssh.sh
   ignore_errors: True
